pulling up to display more 5 feeds, pulling down to refresh/reload first 5 feeds

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorBlue">#47a7f2</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#ffffff</color>
+    <color name="comment_bg_color">#efefef</color>
 </resources>
